--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "test:headed": "cross-env PLAYWRIGHT_HEADLESS=false npx cucumber-js",
     "test:headless": "cross-env PLAYWRIGHT_HEADLESS=true npx cucumber-js",
     "test:json": "cucumber-js --format json:reports/cucumber-report.json",
-    "report:html": "ts-node report-generator.ts"
-
+    "report:html": "ts-node report-generator.ts",
+    "allure:test":"cucumber-js --format allure-cucumberjs/reporter --format-options \"{\\\"resultsDir\\\":\\\"results\\\"}\"",
+    "allure:report": "allure generate results --clean -o allure-report",
+    "allure:open": "allure open allure-report",
+    "allure:run": "npm run allure:test && npm run allure:report && npm run allure:open"
   },
   "author": "Ash Sharma",
   "license": "ISC",
