'feedback feature file added'

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
   "cucumberautocomplete.onTypeFormat": true,
   "editor.quickSuggestions": {
     "strings": true
-  }
+  },
+  "DockerRun.DisableDockerrc": true
 }
