--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "scripts": {
     "test:headed": "cross-env PLAYWRIGHT_HEADLESS=false npx cucumber-js",
     "test:headless": "cross-env PLAYWRIGHT_HEADLESS=true npx cucumber-js",
-    "test:json": "cucumber-js --format json:reports/cucumber-report.json",
-    "report:html": "ts-node report-generator.ts",
-    "allure:test":"cucumber-js --format allure-cucumberjs/reporter --format-options \"{\\\"resultsDir\\\":\\\"results\\\"}\"",
+    "test:run:json": "cucumber-js --format json:reports/cucumber-report.json || exit 0",
+    "report:generate:html": "ts-node report-generator.ts",
+    "report:open:html": "npm run test:run:json && npm run report:generate:html && start reports/cucumber-report.html",
+    "allure:test": "cucumber-js --format @cucumber/pretty-formatter --format json:results/cucumber-report.json",
     "allure:report": "allure generate results --clean -o allure-report",
     "allure:open": "allure open allure-report",
     "allure:run": "npm run allure:test && npm run allure:report && npm run allure:open"
@@ -22,13 +23,13 @@
     "prettier": "^3.6.2"
   },
   "devDependencies": {
-    "@cucumber/cucumber": "^12.1.0",
+    "@cucumber/cucumber": "^8.11.1",
     "@cucumber/messages": "^28.1.0",
     "@cucumber/pretty-formatter": "^2.0.1",
     "@playwright/test": "^1.54.1",
     "@types/node": "^24.1.0",
     "allure-commandline": "^2.34.1",
-    "allure-cucumberjs": "^3.3.2",
+    "allure-cucumberjs": "^2.8.1",
     "allure-js-commons": "^3.3.2",
     "cross-env": "^10.0.0",
     "cucumber-html-reporter": "^7.2.0",
