--- a/package.json
+++ b/package.json
@@ -5,16 +5,12 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "test:headed": "cross-env PLAYWRIGHT_HEADLESS=false npx cucumber-js",
-    "test:headless": "cross-env PLAYWRIGHT_HEADLESS=true npx cucumber-js",
-    "test:run:json": "cucumber-js --format json:reports/cucumber-report.json || exit 0",
-    "report:generate:html": "ts-node report-generator.ts",
-    "report:open:html": "npm run test:run:json && npm run report:generate:html && start reports/cucumber-report.html",
-    "allure:test": "cucumber-js --format @cucumber/pretty-formatter --format json:results/cucumber-report.json",
-    "allure:report": "allure generate results --clean -o allure-report",
-    "allure:open": "allure open allure-report",
-    "allure:run": "npm run allure:test && npm run allure:report && npm run allure:open"
-  },
+  "test:headed": "cross-env PLAYWRIGHT_HEADLESS=false npx cucumber-js --config cucumber.js",
+  "test:headless": "cross-env PLAYWRIGHT_HEADLESS=true npx cucumber-js --config cucumber.js",
+  "test:run:json": "cucumber-js --config cucumber.js || true --parallel 3 --format summary",
+  "report:generate:html": "node generate-html-report.js",
+  "report:open:html": "npm run test:run:json && npm run report:generate:html && start reports/cucumber-report.html"}
+,
   "author": "Ash Sharma",
   "license": "ISC",
   "dependencies": {
@@ -23,7 +19,7 @@
     "prettier": "^3.6.2"
   },
   "devDependencies": {
-    "@cucumber/cucumber": "^8.11.1",
+    "@cucumber/cucumber": "^11.3.0",
     "@cucumber/messages": "^28.1.0",
     "@cucumber/pretty-formatter": "^2.0.1",
     "@playwright/test": "^1.54.1",
